--- a/app/src/main/res/layout/activity_level.xml
+++ b/app/src/main/res/layout/activity_level.xml
@@ -13,18 +13,22 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="" />
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
 
-    <TextView
-        android:id="@+id/txtViewAlertWinningLevel"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Tu as arrivé au level numéro :" />
+        <TextView
+            android:id="@+id/txtViewAlertWinningLevel"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Tu as arrivé au level numéro :" />
 
-    <TextView
-        android:id="@+id/txtViewAlertCurrentLevel"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="" />
+        <TextView
+            android:id="@+id/txtViewAlertCurrentLevel"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="" />
 
 
+    </LinearLayout>
 </LinearLayout>
