--- a/app/src/main/res/layout/activity_level.xml
+++ b/app/src/main/res/layout/activity_level.xml
@@ -12,21 +12,26 @@
         android:id="@+id/txtViewNbrFoisActivityCreated"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_gravity="center_horizontal"
         android:text="" />
     <LinearLayout
         android:layout_width="match_parent"
+        android:layout_gravity="center"
+        android:orientation="vertical"
         android:layout_height="wrap_content">
 
         <TextView
             android:id="@+id/txtViewAlertWinningLevel"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_gravity="center_horizontal"
             android:text="Tu as arrivé au level numéro :" />
 
         <TextView
             android:id="@+id/txtViewAlertCurrentLevel"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_gravity="center_horizontal"
             android:text="" />
 
 
