--- a/app/src/main/res/layout/content_tp3.xml
+++ b/app/src/main/res/layout/content_tp3.xml
@@ -2,7 +2,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:padding="10px"
+    android:padding="200px"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
@@ -10,49 +10,64 @@
     tools:context="com.example.hamzaelrhazi.tp3.TP3Activity"
     tools:showIn="@layout/activity_tp3">
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content">
-        <Button
-            android:id="@+id/btnAjouterUnPoint"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center_horizontal"
-            android:text="AJOUTER UN POINT"
-            android:onClick="ajouterUnPoint"    />
-    </LinearLayout>
+
+
+
+
 
     <LinearLayout
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:padding="10px"
         android:orientation="vertical"
-        android:layout_gravity="center">
+
+        android:layout_gravity="center"
+        android:weightSum="1">
         <LinearLayout
-            android:layout_width="wrap_content"
+            android:layout_width="162dp"
             android:layout_height="wrap_content"
-            android:orientation="horizontal">
+
+            android:orientation="horizontal"
+            android:layout_weight="3.40">
+            <Button
+                android:id="@+id/btnAjouterUnPoint"
+                android:layout_width="168dp"
+                android:layout_height="wrap_content"
+                android:gravity="center"
+                android:onClick="ajouterUnPoint"
+                android:text="AJOUTER UN POINT" />
+        </LinearLayout>
+        <LinearLayout
+            android:layout_width="162dp"
+            android:layout_height="wrap_content"
+
+            android:orientation="horizontal"
+            android:layout_weight="3.40">
+
             <TextView
                 android:id="@+id/txtViewScore"
-                android:layout_width="match_parent"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Score :" />
+                android:gravity="center"
+                android:text="               Score :" />
             <TextView
                 android:id="@+id/txtViewCurrentScore"
-                android:layout_width="match_parent"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:gravity="center"
                 android:text="0" />
         </LinearLayout>
 
         <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_gravity="bottom"
             android:orientation="horizontal">
             <TextView
                 android:id="@+id/txtViewLevel"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="Level :" />
+                android:text="               Level :" />
             <TextView
                 android:id="@+id/txtViewCurrentLevel"
                 android:layout_width="match_parent"
@@ -63,16 +78,17 @@
 
     </LinearLayout>
     <LinearLayout
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="vertical"
         android:layout_gravity="bottom|center">
+
         <Button
             android:id="@+id/btnReinitialiserLeJeu"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="REINITIALISER LE JEU"
-            android:onClick="reinitialiserLeJeu"/>
+            android:onClick="reinitialiserLeJeu"
+            android:text="REINITIALISER LE JEU" />
 
     </LinearLayout>
 
